docker/python-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: python-app
  name: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: python-app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.service: python-app
    spec:
      containers:
        - image: concentration-python-app:latest
          imagePullPolicy: Never
          name: python-app
          ports:
            - containerPort: 5000
          resources: {}
        - name: redis
          image: redis:latest
          ports:
            - containerPort: 6379
      restartPolicy: Always
status: {}
