docker/python-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: python-app
  name: python-app
spec:
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: python-app
status:
  loadBalancer: {}
